--- a/src/resources/views/search.hbs
+++ b/src/resources/views/search.hbs
@@ -1,8 +1,17 @@
 <div class="mt-4">
-    <form method="GET" action="/news">
+    <form method="POST" action="">
         <div class="form-group">
             <label for="search-input">Từ khóa</label>
             <input type="text" name="q" class="form-control" id="search-input" placeholder="Nhập từ khóa...">
+        </div>
+
+        <div class="form-group">
+            <label for="gender-input">Từ khóa</label>
+            <select name="gender" class="form-control" id="gender-input">
+                <option value="">-- Chọn giới tính --</option>
+                <option value="male">Nam</option>
+                <option value="female">Nữ</option>
+            </select>
         </div>
 
         <button type="submit" class="btn btn-primary">Tìm kiếm</button>
